scylla_orm_table_to_struct/example/src/non_compiling_code/no_param_but_question_mark.stderr
error: proc macro panicked
 --> $DIR/no_param_but_question_mark.rs:4:5
  |
4 |     query!("select * from idontexist")?
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Table 'idontexist' in keyspace 'test_keyspace_for_testing' does not exists (or does not have columns, which is useless)

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> $DIR/no_param_but_question_mark.rs:4:39
    |
3   | / fn main() {
4   | |     query!("select * from idontexist")?
    | |                                       ^ cannot use the `?` operator in a function that returns `()`
5   | | }
    | |_- this function should return `Result` or `Option` to accept `?`
    |
    = help: the trait `FromResidual<_>` is not implemented for `()`
note: required by `from_residual`
   --> $DIR/try_trait.rs:339:5
    |
339 |     fn from_residual(residual: R) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
